# xbee-gateway

./: .env.example  .flake8  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: config.example.json  devices.example.json
deploy/docker/: Dockerfile  docker-compose.example.yml
deploy/scripts/: install.sh  uninstall.sh
deploy/systemd/: xbee-gateway.service
docs/: architecture.md  configuration.md  migration-from-legacy.md  milestone-2-web-ui.md  milestone-3-esphome-roadmap.md  mqtt-topics.md
src/xbee_gateway/: __init__.py  __main__.py  app.py  logging_setup.py  signals.py
src/xbee_gateway/config/: __init__.py  defaults.py  loader.py  schema.py
src/xbee_gateway/discovery/: __init__.py  homeassistant.py
src/xbee_gateway/gpio/: __init__.py  null_backend.py  pigpio_backend.py  protocol.py
src/xbee_gateway/mqtt/: __init__.py  client.py  topics.py
src/xbee_gateway/xbee/: coordinator.py  device_registry.py  models.py  radio_port.py  sample_handler.py
tests/: conftest.py
tests/integration/: test_end_to_end_fake_xbee.py
tests/unit/: test_config_loader.py  test_coordinator.py  test_device_registry.py  test_discovery_homeassistant.py  test_mqtt_client.py  test_sample_handler.py
