[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xbee-gateway"
version = "0.1.0"
description = "XBee/Zigbee to MQTT gateway for Home Assistant"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "paho-mqtt>=2.0",
    "digi-xbee>=1.4",
]

[project.optional-dependencies]
gpio = ["pigpio"]
dev = ["pytest", "pytest-cov", "flake8"]

[project.scripts]
xbee-gateway = "xbee_gateway.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
